--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 django-crispy-forms
 crispy-bootstrap5
 Pillow
-django-environ
+django-environ~=0.12.0
 django-enum-choices
-django-phonenumber-field
+django-phonenumber-field~=8.1.0
 django-phonenumbers
-requests
+requests~=2.32.4
+Django~=5.2.2
+djangorestframework~=3.16.0
+django-debug-toolbar
+drf-spectacular
